[gd_scene load_steps=4 format=3 uid="uid://b4afftba8km4w"]

[ext_resource type="Script" path="res://journal.gd" id="1_0qf8m"]
[ext_resource type="Texture2D" uid="uid://blcqgk48o8b17" path="res://paper.jpg" id="2_8kwqu"]

[sub_resource type="SystemFont" id="SystemFont_fiqo7"]
font_names = PackedStringArray("Segoe Script")

[node name="Journal" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_0qf8m")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 85.0
offset_top = 42.0
offset_right = 1082.0
offset_bottom = 599.0
texture = ExtResource("2_8kwqu")

[node name="JournalText" type="Label" parent="."]
process_mode = 3
offset_left = 179.0
offset_top = 94.0
offset_right = 1006.0
offset_bottom = 530.0
theme_override_colors/font_color = Color(0.117647, 0.117647, 0.117647, 1)
theme_override_colors/font_shadow_color = Color(0.117647, 0.117647, 0.117647, 1)
theme_override_colors/font_outline_color = Color(0.117647, 0.117647, 0.117647, 1)
theme_override_fonts/font = SubResource("SystemFont_fiqo7")
theme_override_font_sizes/font_size = 24
autowrap_mode = 3

[node name="NextButton" type="Button" parent="."]
process_mode = 3
offset_left = 837.0
offset_top = 542.0
offset_right = 991.0
offset_bottom = 573.0
text = "Next →"

[node name="PrevButton" type="Button" parent="."]
process_mode = 3
offset_left = 189.0
offset_top = 541.0
offset_right = 339.0
offset_bottom = 568.0
text = "← Previous"

[node name="CloseButton" type="Button" parent="."]
process_mode = 3
offset_left = 1023.0
offset_top = 61.0
offset_right = 1054.0
offset_bottom = 92.0
text = "X"

[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="PrevButton" to="." method="_on_PrevButton_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
